--- a/TestCases/Case1/Config.json
+++ b/TestCases/Case1/Config.json
@@ -1,10 +1,17 @@
 {
   "Name": "Constant Test 1",
   "LoopLines":2,
-  "ShouldError":false,
-  "EndLine":1,
   "Expected": {
     "Stack": "None",
+    "Fields": {
+      "Activate": 0,
+      "Error": 0,
+      "LineNumber": 2,
+      "On": 1,
+      "Power": 1,
+      "RequiredPower": 0,
+      "Setting": 0
+    },
     "Registery": {
       "r0": 0,
       "r1": 0,
