--- a/TestCases/Case3/Config.json
+++ b/TestCases/Case3/Config.json
@@ -1,12 +1,12 @@
 {
-  "Name": "Alias Test 1",
-  "LoopLines":2,
+  "Name": "Comment Test 1",
+  "LoopLines":3,
   "Expected": {
     "Stack": "None",
     "Fields": {
       "Activate": 0,
       "Error": 0,
-      "LineNumber": 2,
+      "LineNumber": 3,
       "On": 1,
       "Power": 1,
       "RequiredPower": 0,
@@ -15,7 +15,7 @@
     "Registery": {
       "r0": 0,
       "r1": 30,
-      "r2": 0,
+      "r2": 30,
       "r3": 0,
       "r4": 0,
       "r5": 0,
