--- a/TestCases/Case15/Config.json
+++ b/TestCases/Case15/Config.json
@@ -1,12 +1,12 @@
 {
-  "Name": "Branch Test 5",
-  "LoopLines":10,
+  "Name": "Utility Functions Test 2",
+  "LoopLines":2,
   "Expected": {
     "Stack": "None",
     "Fields": {
       "Activate": 0,
       "Error": 0,
-      "LineNumber": 4,
+      "LineNumber": 2,
       "On": 1,
       "Power": 1,
       "RequiredPower": 0,
@@ -14,25 +14,25 @@
     },
     "Registery": {
       "r0": 0,
-      "r1": 69,
+      "r1": 0,
       "r2": 0,
-      "r3": 5,
+      "r3": 0,
       "r4": 0,
       "r5": 0,
       "r6": 0,
       "r7": 0,
-      "r8": 9,
-      "r9": 69,
+      "r8": 0,
+      "r9": 0,
       "r10": 0,
       "r11": 0,
       "r12": 0,
       "r13": 0,
-      "r14": 0,
-      "r15": 0,
+      "r14": 8,
+      "r15": 7.5,
       "r16": 0,
-      "r17": 3
+      "r17": 0
     },
     "Alias": { "sp": "r16", "ra": "r17"},
-    "Constant": {"Branch":5,"NextBranch":9}
+    "Constant": {}
   }
 }
