Added test running on stack. Added a stack test. Added some of the stack functions

--- a/TestCases/Case1/Config.json
+++ b/TestCases/Case1/Config.json
@@ -2,7 +2,7 @@
   "Name": "Constant Test 1",
   "LoopLines":2,
   "Expected": {
-    "Stack": "None",
+    "Stack": {},
     "Fields": {
       "Activate": 0,
       "Error": 0,
