--- a/TestCases/Case14/Config.json
+++ b/TestCases/Case14/Config.json
@@ -2,7 +2,7 @@
   "Name": "Branch Test 5",
   "LoopLines":10,
   "Expected": {
-    "Stack": "None",
+    "Stack": {},
     "Fields": {
       "Activate": 0,
       "Error": 0,
