--- a/TestCases/Case13/Config.json
+++ b/TestCases/Case13/Config.json
@@ -2,7 +2,7 @@
   "Name": "Branch Test 4",
   "LoopLines":7,
   "Expected": {
-    "Stack": "None",
+    "Stack": {},
     "Fields": {
       "Activate": 0,
       "Error": 0,
