--- a/TestCases/Case15/Config.json
+++ b/TestCases/Case15/Config.json
@@ -2,7 +2,7 @@
   "Name": "Utility Functions Test 2",
   "LoopLines":3,
   "Expected": {
-    "Stack": "None",
+    "Stack": {},
     "Fields": {
       "Activate": 0,
       "Error": 0,
