--- a/TestCases/Case16/Config.json
+++ b/TestCases/Case16/Config.json
@@ -2,7 +2,7 @@
   "Name": "Utility Functions Test 3",
   "LoopLines":5,
   "Expected": {
-    "Stack": "None",
+    "Stack": {},
     "Fields": {
       "Activate": 0,
       "Error": 0,
