--- a/TestCases/Case18/Config.json
+++ b/TestCases/Case18/Config.json
@@ -1,27 +1,27 @@
 {
-  "Name": "Branch Test 3",
-  "LoopLines":7,
+  "Name": "Stack Functions Test 1",
+  "LoopLines": 5,
   "Expected": {
-    "Stack": {},
     "Fields": {
       "Activate": 0,
       "Error": 0,
-      "LineNumber": 4,
+      "LineNumber": 5,
       "On": 1,
       "Power": 1,
       "RequiredPower": 0,
       "Setting": 0
     },
+    "Stack": {"0":1,"1":3},
     "Registery": {
-      "r0": 0,
-      "r1": 2,
-      "r2": 0,
+      "r0": 3,
+      "r1": 3,
+      "r2": 1,
       "r3": 0,
       "r4": 0,
-      "r5": 69,
+      "r5": 0,
       "r6": 0,
       "r7": 0,
-      "r8": 9,
+      "r8": 0,
       "r9": 0,
       "r10": 0,
       "r11": 0,
@@ -30,9 +30,9 @@
       "r14": 0,
       "r15": 0,
       "r16": 0,
-      "r17": 2
+      "r17": 0
     },
     "Alias": { "sp": "r16", "ra": "r17"},
-    "Constant": {"Branch":5,"NextBranch":10}
+    "Constant": {}
   }
 }
