--- a/TestCases/Case2/Config.json
+++ b/TestCases/Case2/Config.json
@@ -2,7 +2,7 @@
   "Name": "Alias Test 1",
   "LoopLines":2,
   "Expected": {
-    "Stack": "None",
+    "Stack": {},
     "Fields": {
       "Activate": 0,
       "Error": 0,
