--- a/TestCases/Case18/Config.json
+++ b/TestCases/Case18/Config.json
@@ -1,15 +1,18 @@
 {
   "Name": "Stack Functions Test 1",
   "LoopLines": 5,
+  "RunDevice": 69,
+  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69 } ],
   "Expected": {
-    "Fields": {
+    "Fields": {"69":{
       "Activate": 0,
       "Error": 0,
       "LineNumber": 5,
       "On": 1,
       "Power": 1,
-      "RequiredPower": 0,
-      "Setting": 0
+        "RequiredPower": 0,
+        "Setting": 0
+      }
     },
     "Stack": {"0":1,"1":3},
     "Registery": {
