--- a/TestCases/Case2/Config.json
+++ b/TestCases/Case2/Config.json
@@ -1,16 +1,19 @@
 {
   "Name": "Alias Test 1",
   "LoopLines":2,
+  "RunDevice": 69,
+  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69 } ],
   "Expected": {
     "Stack": {},
-    "Fields": {
-      "Activate": 0,
-      "Error": 0,
-      "LineNumber": 2,
-      "On": 1,
-      "Power": 1,
-      "RequiredPower": 0,
-      "Setting": 0
+    "Fields": {"69":{
+        "Activate": 0,
+        "Error": 0,
+        "LineNumber": 2,
+        "On": 1,
+        "Power": 1,
+        "RequiredPower": 0,
+        "Setting": 0
+      }
     },
     "Registery": {
       "r0": 0,
