--- a/TestCases/Case4/Config.json
+++ b/TestCases/Case4/Config.json
@@ -1,16 +1,19 @@
 {
   "Name": "Operation Test 1",
   "LoopLines":5,
+  "RunDevice": 69,
+  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69 } ],
   "Expected": {
     "Stack": {},
-    "Fields": {
+    "Fields": {"69":{
       "Activate": 0,
       "Error": 0,
       "LineNumber": 5,
       "On": 1,
       "Power": 1,
-      "RequiredPower": 0,
-      "Setting": 0
+        "RequiredPower": 0,
+        "Setting": 0
+      }
     },
     "Registery": {
       "r0": 10,
