--- a/TestCases/Case1/Config.json
+++ b/TestCases/Case1/Config.json
@@ -36,6 +36,7 @@
       "r17": 0
     },
     "Alias": { "sp": "r16", "ra": "r17" },
+    "PinAlias":{},
     "Constant": { "Bob": 50, "bob": 60 }
   }
 }
