--- a/TestCases/Case24/Config.json
+++ b/TestCases/Case24/Config.json
@@ -1,52 +1,52 @@
 {
-  "Name": "Device Port Test 1",
-  "LoopLines": 4,
+  "Name": "Device Port Test 2",
+  "LoopLines": 8,
   "RunDevice": 69,
-  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69, "Pins":{"d0":56} },{"Type":"StructureGasMixer", "ReferenceId": 56} ],
+  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69, "Pins":{"d0":56} },{"Type":"StructureGasMixer", "ReferenceId": 56,"Setting":55} ],
   "Expected": {
     "Fields": {
       "69":{
         "Activate": 0,
         "Error": 0,
-        "LineNumber": 4,
-        "On": 1,
+        "LineNumber": 8,
+        "On": 0,
         "Power": 1,
         "RequiredPower": 0,
-        "Setting": 0
+        "Setting": 5060
       },
       "56":{
         "Error": 0,
-        "On": 1,
+        "On": 0,
         "Ratio": 0,
         "Power": 1,
         "RequiredPower": 100,
         "Maximum": 100,
-        "Setting": 0
+        "Setting": 92
       }
     },
     "Stack": {},
     "Registery": {
-      "r0": 0,
-      "r1": 0,
+      "r0": 55,
+      "r1": 5060,
       "r2": 0,
-      "r3": 100,
-      "r4": 13,
+      "r3": 0,
+      "r4": 0,
       "r5": 0,
       "r6": 0,
       "r7": 0,
       "r8": 0,
       "r9": 0,
-      "r10": 0,
+      "r10": 92,
       "r11": 0,
       "r12": 0,
-      "r13": 1,
+      "r13": 0,
       "r14": 0,
       "r15": 0,
       "r16": 0,
       "r17": 0
     },
     "Alias": { "sp": "r16", "ra": "r17"},
-    "PinAlias":{},
+    "PinAlias":{"Thing":"d0", "SelfStuff": "db"},
     "Constant": {}
   }
 }
