--- a/TestCases/Case23/Config.json
+++ b/TestCases/Case23/Config.json
@@ -1,6 +1,6 @@
 {
   "Name": "Batch Test 1",
-  "LoopLines": 4,
+  "LoopLines": 10,
   "RunDevice": 69,
   "Devices": [
     { "Type": "StructureCircuitHousing", "ReferenceId": 69, "Pins": {} },
@@ -13,7 +13,7 @@
       "69": {
         "Activate": 0,
         "Error": 0,
-        "LineNumber": 4,
+        "LineNumber": 10,
         "On": 1,
         "Power": 1,
         "RequiredPower": 0,
@@ -52,11 +52,11 @@
       "r0": 25,
       "r1": 0,
       "r2": 140,
-      "r3": 0,
-      "r4": 0,
-      "r5": 0,
-      "r6": 0,
-      "r7": 0,
+      "r3": 30,
+      "r4": 30,
+      "r5": 2,
+      "r6": "ninf",
+      "r7": 10,
       "r8": 0,
       "r9": 0,
       "r10": 0,
