--- a/TestCases/Case26/Config.json
+++ b/TestCases/Case26/Config.json
@@ -38,6 +38,6 @@
     },
     "Alias": { "sp": "r16", "ra": "r17"},
     "PinAlias":{},
-    "Constant": {}
+    "Constant": {  "nan":"NaN", "ninf":"ninf"}
   }
 }
