--- a/TestCases/Case12/Config.json
+++ b/TestCases/Case12/Config.json
@@ -37,6 +37,6 @@
     },
     "Alias": { "sp": "r16", "ra": "r17"},
     "PinAlias":{},
-    "Constant": {"Branch":5,"NextBranch":10}
+    "Constant": {  "nan":"NaN", "ninf":"ninf","Branch":5,"NextBranch":10}
   }
 }
