--- a/TestCases/Case16/Config.json
+++ b/TestCases/Case16/Config.json
@@ -2,7 +2,7 @@
   "Name": "Utility Functions Test 3",
   "LoopLines":5,
   "RunDevice": 69,
-  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69 } ],
+  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69,"On": 1 } ],
   "Expected": {
     "Stack": {},
     "Fields": {"69":{
