--- a/TestCases/Case19/Config.json
+++ b/TestCases/Case19/Config.json
@@ -2,7 +2,7 @@
   "Name": "Hex Numbers Test 1",
   "LoopLines": 4,
   "RunDevice": 69,
-  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69 } ],
+  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69 ,"On": 1} ],
   "Expected": {
     "Fields": {"69":{
       "Activate": 0,
