--- a/TestCases/Case22/Config.json
+++ b/TestCases/Case22/Config.json
@@ -2,7 +2,7 @@
   "Name": "Device Port Test 1",
   "LoopLines": 4,
   "RunDevice": 69,
-  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69, "Pins":{"d0":56} },{"Type":"StructureGasMixer", "ReferenceId": 56} ],
+  "Devices": [ {"Type":"StructureCircuitHousing", "ReferenceId": 69, "Pins":{"d0":56},"On": 1},{"Type":"StructureGasMixer", "ReferenceId": 56,"RequiredPower": 100,"Maximum": 100,"On": 1}],
   "Expected": {
     "Fields": {
       "69":{
@@ -19,6 +19,7 @@
         "On": 1,
         "Ratio": 0,
         "Power": 1,
+        "Lock":0,
         "RequiredPower": 100,
         "Maximum": 100,
         "Setting": 0
